roles/iptables/files/iptables.firewall.rules
*filter

#Written by Matthew Fournier 2013-12-21 while he was learning 
#about firewalls and iptables. Loosly follows the tutorial at
#http://feross.org/how-to-setup-your-linode/

#allow loopback
-A INPUT -i lo -j ACCEPT

#accept all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#allow all outbound traffic
-A OUTPUT -j ACCEPT

#Allow HTTP on port 80 and HTTPS on 443
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

#allow SSH on port 44
-A INPUT -p tcp -m state --state NEW --dport 44 -j ACCEPT

#Allow SSH on port 22 
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

#allow jabber on ports 5222, 5223, 5280
-A INPUT -p tcp -m state --state NEW --dport 5222 -j ACCEPT
-A INPUT -p tcp -m state --state NEW --dport 5223 -j ACCEPT
-A INPUT -p tcp -m state --state NEW --dport 5280 -j ACCEPT

#Allow all traffic from the local machine
-A INPUT --source 127.0.0.1 -j ACCEPT

#Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

#Log iptables denied calls
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

#Reject all other inbound traffic 
-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
